Moved the User JWT generation to public repo